--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 
-		<div class="text-center text-muted">
+		<div class="text-center text-muted" ng-show="todos.length == 5">
 			<p>Copied from <a href="http://scotch.io">Scotch</a>.</p>
 			<p>Read the <a href="http://scotch.io/tutorials/javascript/creating-a-single-page-todo-app-with-node-and-angular">tutorial</a>.</p>
 		</div>
